--- a/sitio-web-anses-accesible/index.html
+++ b/sitio-web-anses-accesible/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ANSES - Versión Accesible</title>
-  <link rel="stylesheet" href="https://www.anses.gob.ar/themes/custom/anses/css/styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -35,8 +35,10 @@
 </main>
 
 <footer>
-  <p>© ANSES 2024 - Versión accesibilizada para fines académicos</p>
+  <p>© ANSES 2025 - Versión accesibilizada para fines académicos</p>
 </footer>
+
+
 
 </body>
 </html>
