--- a/sitio-web-anses-accesible/index.html
+++ b/sitio-web-anses-accesible/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Jubilaciones y Pensiones - Versión Accesible</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
