--- a/sitio-web-anses-accesible/index.html
+++ b/sitio-web-anses-accesible/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Jubilaciones y Pensiones - Versión Accesible</title>
+  <title>ANSES - Versión Accesible</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -19,45 +19,23 @@
 </header>
 
 <main>
-  <h1>Jubilaciones y Pensiones</h1>
+  <h1>Administración Nacional de la Seguridad Social (ANSES)</h1>
 
-  <img src="https://www.anses.gob.ar/sites/default/files/2023-02/jubilaciones-pensiones.png"
-       alt="Persona adulta mayor sonriendo mientras realiza un trámite">
+  <img src="https://www.anses.gob.ar/sites/default/files/2024-03/anses-banner-home.jpg" 
+       alt="Edificio central de ANSES con personas ingresando">
 
-  <p>ANSES brinda cobertura previsional a trabajadores retirados y pensionados de todo el país.</p>
+  <p>Somos la Administración Nacional de la Seguridad Social (ANSES), organismo responsable de la seguridad social en Argentina.</p>
 
-  <h2>Simulador de Edad Jubilatoria</h2>
+  <h2>Video Institucional</h2>
 
-  <p>Completá el siguiente formulario para estimar si ya contás con los requisitos para iniciar el trámite.</p>
-
-  <form action="#" method="post">
-
-    <fieldset>
-      <legend>Datos personales</legend>
-
-      <label for="nombre">Nombre completo</label>
-      <input id="nombre" name="nombre" type="text" required aria-required="true">
-
-      <label for="dni">DNI</label>
-      <input id="dni" name="dni" type="number" required aria-required="true">
-
-      <label for="sexo">Sexo</label>
-      <select id="sexo" name="sexo">
-        <option value="masculino">Masculino</option>
-        <option value="femenino">Femenino</option>
-        <option value="otro">Otro / Prefiero no decir</option>
-      </select>
-
-    </fieldset>
-
-    <button type="submit">Calcular</button>
-
-  </form>
-
+  <figure>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/EQp1OCSBTeg" title="Video informativo sobre ANSES"></iframe>
+    <figcaption>Video explicativo sobre los servicios que brinda ANSES.</figcaption>
+  </figure>
 </main>
 
 <footer>
-  <p>© ANSES 2025 - Versión accesibilizada para fines académicos.</p>
+  <p>© ANSES 2025 - Versión accesibilizada para fines académicos</p>
 </footer>
 
 </body>
