--- a/sitio-web-anses-original/index.html
+++ b/sitio-web-anses-original/index.html
@@ -11,7 +11,7 @@
   <div class="menu">
     <ul>
       <li><a href="#">Trámites</a></li>
-      <li><a href="#">Jubilaciones</a></li>
+      <li><a href="#">Jubilaciones y pensiones</a></li>
       <li><a href="#">Asignaciones</a></li>
       <li><a href="#">Contactos</a></li>
     </ul>
