--- a/sitio-web-anses-accesible/jubilaciones.html
+++ b/sitio-web-anses-accesible/jubilaciones.html
@@ -11,7 +11,7 @@
   <nav aria-label="Menú principal">
     <ul>
       <li><a href="index.html">Inicio</a></li>
-      <li><a href="jubilaciones.html">Jubilaciones</a></li>
+      <li><a href="jubilaciones.html">Jubilaciones y pensiones</a></li>
       <li><a href="#">Asignaciones</a></li>
       <li><a href="#">Contacto</a></li>
     </ul>
