--- a/sitio-web-anses-original/index.html
+++ b/sitio-web-anses-original/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ANSES - Página no accesible (versión original)</title>
-  <link rel="stylesheet" href="https://www.anses.gob.ar/themes/custom/anses/css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
