--- a/sitio-web-anses-accesible/index.html
+++ b/sitio-web-anses-accesible/index.html
@@ -24,7 +24,7 @@
   <img src="https://www.anses.gob.ar/sites/default/files/2024-03/anses-banner-home.jpg" 
        alt="Edificio central de ANSES con personas ingresando">
 
-  <p>Somos la Administración Nacional de la Seguridad Social (ANSES), organismo responsable de la seguridad social en Argentina.</p>
+  <p>Sitio web de la Administración Nacional de la Seguridad Social (ANSES), organismo responsable de la seguridad social en Argentina.</p>
 
   <h2>Video Institucional</h2>
 
