--- a/sitio-web-anses-original/index.html
+++ b/sitio-web-anses-original/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ANSES - Página no accesible (versión original)</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 
 <img src="https://www.anses.gob.ar/sites/default/files/2024-03/anses-banner-home.jpg">
 
-<p>Somos la Administración Nacional de la Seguridad Social (ANSES).</p>
+<p>Sitio web de la Administración Nacional de la Seguridad Social (ANSES).</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/EQp1OCSBTeg"></iframe>
 
