se corrigen errores de redireccionamiento

--- a/sitio-web-anses-original/index.html
+++ b/sitio-web-anses-original/index.html
@@ -10,8 +10,8 @@
 <header>
   <div class="menu">
     <ul>
-      <li><a href="#">Trámites</a></li>
-      <li><a href="#">Jubilaciones y pensiones</a></li>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="jubilaciones.html">Jubilaciones y pensiones</a></li>
       <li><a href="#">Asignaciones</a></li>
       <li><a href="#">Contactos</a></li>
     </ul>
