--- a/sitio-web-anses-original/jubilaciones.html
+++ b/sitio-web-anses-original/jubilaciones.html
@@ -35,6 +35,7 @@
   <select>
     <option>Masculino</option>
     <option>Femenino</option>
+    <option>Otro</option>
   </select><br>
   <button>Enviar</button>
 </form>
